
New right mouse menu entry 'Copy selected rows to new window' available in all tables.
  If windows with with matching column names and column types already exist another pop up menu allows to append
  the selected rows to one of these windows.

#412 Provided Command Line Interface (CLI).
  See Readme.txt in the squirrelcli/ subdirectory of your SQuirreL installation.


Bug fixes:

CSV export --> Corrected line separator. This bug was lately introduced with feature #438.

'Find column'-button now also available when result was moved to own window.

MAC launch scripts: Added double quotes to the definition of the IZPACK_JAVA_HOME variable
  as requested by Pete K. in bug #1321

#1337 Version check dialog told Java 8 was needed for version 3.x instead of 3.8.1

#740 The 'Copy as INSERT-VALUES/UPDATE-SET statement' functions generate 'PressCtrlH' instead of table name.
  This problem is not generally solvable. Improvements were implemented to provide a table name in more occasions.
  Note: PressCtrlH is meant to be a hint to use the editor's replace function to correct a generated script.

#565 Double clicking selection should stop at '=' '>' '<' chars.

Improved repaint behavior when rows are deleted in a table.

Fixed NullPointer in the 'Show foreign key references' feature. (See right mouse menu of SQL results.)

#1334 The 'Limit read' feature of CHAR, VARCHAR, LONGVARCHAR type columns was declared unstable,
  see menu File --> Global preferences --> tab Data type controls --> section CHAR, VARCHAR, LONGVARCHAR.
  Corresponding Errors are now clearly telling about the instability.

SQLs that used double quoted table or schema names do now have a chance to be identified as editable.


Fix problem in RotatedTableCtrl with rawtype columns (BINARY, VARBINARY,(VAR)CHAR FOR BIT DATA, BLOB)
 Thanks to Stefan Mueller for the patch.

#1330 Plugin SQLReplace does not function in SQL Worksheets (ctrl+n)
  Also added a small help file for the Plugin.
